# honest

./: .gitignore  Cargo.toml  README.md  build.ps1
cmd/: hash.ps1
public/: index.html
public/wasm/: bundle.js
src/: block.rs  blockchain.rs  consensus.rs  identification.rs  lib.rs  nonce.rs  transaction.rs
src/hash/: sha256.rs
src/serializer/: block.rs  chain.rs
src/unixtime/: mod.rs  nano.rs
