[package]
name = "honest"
version = "0.1.0"
authors = ["kentork <4198504+kentork@users.noreply.github.com>"]

[lib]
crate-type=["cdylib"]

[dependencies]
lazy_static = "^1.0"
sha2 = "0.7.0"
# argon2rs = "0.2.5"
serde = "1.0.25"
serde_derive = "1.0.25"
bincode = "0.9.2"
base64 = "0.9.0"
# ring = "0.13.0-alpha"
